--- a/less/home-page.less
+++ b/less/home-page.less
@@ -7,7 +7,9 @@
   }
   .content-section {
     @media @mobile {
-      flex-direction: column;
+      display: flex;
+      width: 100%;
+      flex-flow: column-reverse wrap;
     }
 
     margin: 30px 0;
@@ -19,6 +21,7 @@
     .text-content {
       @media @mobile {
         width: 100%;
+
       }
 
       width: 48%;
@@ -28,6 +31,8 @@
     .img-content {
       @media @mobile {
         width: 100%;
+        align-self: center;
+        
       }
       width: 48%;
       padding-left: 1%;
@@ -35,7 +40,12 @@
     }
    
       img {
+        width: 100%;
         border-radius: 10px;
+        @media @mobile {
+          width: 95%;
+          margin-left: @margin;
+        }
       }
     }
   
@@ -52,10 +62,20 @@
     }
 
     .img-content {
+      @media @mobile {
+        width: 100%;
+        align-self: center;
+      }
       padding-right: 1%;
       padding-left: 0;
     }
 
+    img {
+      @media @mobile {
+        width: 100%;
+        margin-left: @margin;
+      }
+    }
     .title2 {
       font-size: 3em;
     }
